# threat-detection

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  test_db.py  test_ws.py
alembic/: env.py
alembic/versions/: 77c3939b62cd_initial_schema.py  a1b2c3d4e5f6_update_threat_type_enum.py
api/: analytics.py  auth.py  chat.py  schemas.py  system.py  videos.py  ws.py
core/: config.py  logging.py  metrics.py  security.py
db/: database.py  schemas.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/assets/: Analytics-CpnfejKl.js  ConnectionIndicator-CrcVA8lK.js  Dashboard-ySqzbY2_.js  EmptyState-Car40eBy.js  History-CzZIuHnO.js  LiveDetection-qikCdPnj.js  Login-DhDbuLbl.js  NotFound-BrfRb2Ue.js  PageHeader-DCsrJ_Pb.js  Settings-BqWBVjhT.js  TimelineChart-DNJb7foq.js  TrendsChart-Bhf1Ryvk.js  analytics.service-BcfRmyNO.js  badge-BHUShJrV.js  charts-DGw8qj-V.js  cn-CWnuBWnE.js  index-DGzRgTW1.css  index-DzR7qH8F.js  input-DBJQwf-Z.js  markdown-BHq_O0np.js  motion-CAN_fcCH.js  query-DYAcz8jZ.js  react-DDvsG__X.js  threats-D8sDVM1U.js  time-BdizLtP2.js  useChartTheme-YQdMshpQ.js  vendor-CfzllAbH.js  video.service-BmKS3zHG.js
frontend/src/: main.tsx
frontend/src/app/: App.tsx  env.d.ts  providers.tsx  router.tsx
frontend/src/constants/: config.ts  routes.ts  storage-keys.ts  threats.ts  ws.ts
frontend/src/hooks/: useAuth.tsx  useDebounce.ts  useFps.ts  useFullscreen.ts  useMediaQuery.ts  (+4 more)
inference/: detector.py  frames.py  types.py
scripts/: seed_user.py  test_ws.py
(+80 files in other folders)
