[project]
name = "threat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.1",
    "huggingface-hub>=0.24.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0",
    "pillow>=12.2.0",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "ultralytics>=8.4.79",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.12",
    "websockets>=16.0",
]
